snapshots/aws_tgw_multi_az_intra_region/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-00f6e00d1d58d0f63",
     "NetworkAclId": "acl-09e33d91dd32e301c",
     "SubnetId": "subnet-095b7d5edef8309a2"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0ca3dc3c2d2934fea",
     "NetworkAclId": "acl-09e33d91dd32e301c",
     "SubnetId": "subnet-02d0c2429a21c620c"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.100.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-09e33d91dd32e301c",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "dev-priv-nacl"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Environment",
     "Value": "dev"
    }
   ],
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0081a1032fce9c7dc",
     "NetworkAclId": "acl-0551c0d684a20ed46",
     "SubnetId": "subnet-0e2db2cb59e638c67"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0c544dac58486101e",
     "NetworkAclId": "acl-0551c0d684a20ed46",
     "SubnetId": "subnet-0b256c7ab9c40a4cb"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0260f203c39a6b1ae",
     "NetworkAclId": "acl-0551c0d684a20ed46",
     "SubnetId": "subnet-050b09f1d9d277ecc"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.1.100.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0551c0d684a20ed46",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "prod-priv-nacl"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-0e833ff779b9f1982",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0e22fdf4eb07c7672",
     "NetworkAclId": "acl-0851ef9985bf863ae",
     "SubnetId": "subnet-0ee85b20db3839434"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0c51bcf86dbd33aae",
     "NetworkAclId": "acl-0851ef9985bf863ae",
     "SubnetId": "subnet-09752dac4bffe6253"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0851ef9985bf863ae",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "prod-pub-nacl"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    }
   ],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0651ce275a197d3f6",
     "NetworkAclId": "acl-08b523e83e6920881",
     "SubnetId": "subnet-045337a9d4c78b263"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-08b523e83e6920881",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Name",
     "Value": "dev-priv-az4-nacl"
    },
    {
     "Key": "Environment",
     "Value": "dev"
    }
   ],
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-08553a0be1d97f2ce",
     "NetworkAclId": "acl-0b279f2051adbea3c",
     "SubnetId": "subnet-0d6ff43d8e5488043"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0f7191c8023a5e80b",
     "NetworkAclId": "acl-0b279f2051adbea3c",
     "SubnetId": "subnet-04a1bec10b9c08e3b"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0b279f2051adbea3c",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Environment",
     "Value": "dev"
    },
    {
     "Key": "Name",
     "Value": "dev-tgw-nacl"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0bd4669844d65d1c2",
     "NetworkAclId": "acl-04585c783a91b3602",
     "SubnetId": "subnet-08b1e7e4453d9149d"
    },
    {
     "NetworkAclAssociationId": "aclassoc-07474cf3d6c3a503f",
     "NetworkAclId": "acl-04585c783a91b3602",
     "SubnetId": "subnet-01cd4a0ff99cb799a"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0f5c500ebd972add5",
     "NetworkAclId": "acl-04585c783a91b3602",
     "SubnetId": "subnet-0280629ca5dbc9bf7"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-04585c783a91b3602",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Name",
     "Value": "prod-tgw-nacl"
    }
   ],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-045a339185f751cc9",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-071279d6d3ef162c8",
     "NetworkAclId": "acl-003c24d105a44df40",
     "SubnetId": "subnet-01eaf54823e65b693"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-003c24d105a44df40",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Environment",
     "Value": "dev"
    },
    {
     "Key": "Name",
     "Value": "dev-pub-nacl"
    }
   ],
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  }
 ]
}
