snapshots/aws_tgw_multi_az_intra_region/aws_configs/us-east-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-01f2f00a2661f9e4a",
   "GroupName": "terraform-20200803153516464500000002",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Name",
     "Value": "prod-priv-sg"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-04efb8dc3c6692286",
   "GroupName": "terraform-20200803153523934200000003",
   "IpPermissions": [
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Name",
     "Value": "prod-jump-sg"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    }
   ],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-065646b58ed5da236",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-065646b58ed5da236",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0ae877d00c16f3a72",
   "GroupName": "terraform-20200803153516462400000001",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Name",
     "Value": "prod-pub-sg"
    }
   ],
   "VpcId": "vpc-0e578e50686443ca0"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0dc0c54dbbb03f553",
   "GroupName": "terraform-20200803153524782000000004",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Environment",
     "Value": "dev"
    },
    {
     "Key": "Name",
     "Value": "dev-priv-sg"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0f433ef8fbb9e002b",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0f433ef8fbb9e002b",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-0a96945f1dbc5b2ac"
  }
 ]
}
